Covered circuits modeled in Lava, going for ForSyDe and sketching Coquet.

--- a/report/references.bib
+++ b/report/references.bib
@@ -17,6 +17,21 @@
     address = {New York, NY, USA},
 }
 
+@inproceedings{observable-sharing-1999,
+    author = {Claessen, Koen and Sands, David},
+    title = {Observable Sharing for Functional Circuit Description},
+    booktitle = {Proceedings of the 5th Asian Computing Science Conference on Advances in Computing Science},
+    series = {ASIAN '99},
+    year = {1999},
+    isbn = {3-540-66856-X},
+    pages = {62--73},
+    numpages = {12},
+    url = {http://dl.acm.org/citation.cfm?id=646066.756689},
+    acmid = {756689},
+    publisher = {Springer-Verlag},
+    address = {London, UK, UK},
+} 
+
 @inproceedings{forsyde1999,
     title={Formal System Design Based on the Synchrony Hypothesis, Functional Models, and Skeletons},
     author={Sander, Ingo and Jantsch, Axel},
