reported and explained the description of the ALU under ForSyDe, more expansion on the TODOs for Coquet

--- a/report/references.bib
+++ b/report/references.bib
@@ -58,3 +58,9 @@
     publisher={MIT Press},
 }
 
+@misc{website:ghc-typenats,
+    title={Type-level naturals in GHC},
+    month={November},
+    year={2013},
+    howpublished={\url{https://ghc.haskell.org/trac/ghc/wiki/TypeNats}},
+}
