combinational simulations in Lava using map . simulate instead of simulateSeq, all simulations named "test*"

--- a/report/code/lava-circuit1-simulation-hadd.tex
+++ b/report/code/lava-circuit1-simulation-hadd.tex
@@ -1,6 +1,6 @@
 \begin{haskellcode}
-    verifyHalfAdder :: [(SB, SB)]
-    verifyHalfAdder = simulateSeq halfAdder input
+    testHalfAdder :: [(SB, SB)]
+    testHalfAdder = map (simulate halfAdder) input
         where
             input = [ (low,  low)
                     , (low,  high)
